Update to Java 22.